# dprint-plugin-brainfuck

./: Cargo.toml  README.md  dprint.json
src/: configuration.rs  lib.rs  wasm_plugin.rs
