[package]
name = "dprint-plugin-brainfuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
dprint-core = { version = "0.58.3", features = ["wasm"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
crate-type = ["lib", "cdylib"]
